fix sidebar not working on mobile

--- a/style.css
+++ b/style.css
@@ -190,4 +190,5 @@ a {
 
 	.RP, .PE {height: inherit}
 
+	.format {float: none}
 }
